--- a/greensource_pages/templates/greensource_pages/testimonial.html
+++ b/greensource_pages/templates/greensource_pages/testimonial.html
@@ -35,7 +35,7 @@
                     <div class="text-block">
                         <h6>{{ testimonial.title }}</h6>
                         <span>{{ testimonial.name }}</span>
-                        <p>{{ testimonial.body }}</p>
+                        <p>{{ testimonial.body|linebreaks }}</p>
                     </div>
                 </div>
         </div>
