--- a/templates/403.html
+++ b/templates/403.html
@@ -43,7 +43,7 @@
                             <a href="javascript:location='mailto:\u0073\u0075\u0070\u0070\u006f\u0072\u0074\u0040\u0067\u0072\u0065\u0065\u006e\u0073\u006f\u0075\u0072\u0063\u0065\u006e\u0065\u0072\u0067\u0079\u002e\u0063\u006f';void 0"
                                 class="d-flex align-items-center mr-4">
                                 <span class="icon-envelope mr-2"></span>
-                                <script type="text/javascript">document.write('\u0073\u0075\u0070\u0070\u006f\u0072\u0074\u0040\u0067\u0072\u0065\u0065\u006e\u0073\u006f\u0075\u0072\u0063\u0065\u006e\u0065\u0072\u0067\u0079\u002e\u0063\u006f\u006d')</script>
+                                <span class="d-none d-md-inline-block"><script type="text/javascript">document.write('\u0073\u0075\u0070\u0070\u006f\u0072\u0074\u0040\u0067\u0072\u0065\u0065\u006e\u0073\u006f\u0075\u0072\u0063\u0065\u006e\u0065\u0072\u0067\u0079\u002e\u0063\u006f\u006d')</script></span>
                             </a>
                             <a href="#" class="d-flex align-items-center mr-auto">
                                 <span class="icon-phone mr-2"></span>
