--- a/news/templates/article_detail.html
+++ b/news/templates/article_detail.html
@@ -8,7 +8,7 @@
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>Greensource Blog Details</h1>
+            <h1>Greensource Blog Post</h1>
         </div>
     </div>
 </div>
@@ -28,9 +28,8 @@
                 <p> | &nbsp; {{ post.date|date:"F d" }} &nbsp;.</p>
                 <div class="card-body">
                     <small class="text-muted"><i class="fas fa-user"></i> Admin &nbsp; &nbsp;<i class="far fa-comments"></i> {{ count }}</small>
-                    <h5 class="card-title">{{post.short_description}}</h5>
                     <p class="card-text">
-                        {{ post.body|linebreaks }}
+                        {{ post.body|safe }}
                     </p>
                 </div>
                 <div class="link">
