--- a/news/templates/article_detail.html
+++ b/news/templates/article_detail.html
@@ -35,10 +35,10 @@
                 <div class="link">
                     <p>
                         share <i class="fas fa-share-alt"></i>&nbsp; &nbsp;
-                        <a href="https://www.facebook.com"><i class="fab fa-facebook active"></i></a>
-                        <a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
-                        <a href="https://www.linkedin.com"><i class="fab fa-linkedin"></i></a>
-                        <a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/greensourcenergy/"><i class="fab fa-facebook active"></i></a>
+                        <a href="https://www.twitter.com/greenn_energy"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.linkedin.com/company/greensource-energy"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.instagram.com/greensourcenergy"><i class="fab fa-instagram"></i></a>
                     </p>
                 </div>
                 <div class="row">
