--- a/greensource_pages/templates/greensource_pages/about.html
+++ b/greensource_pages/templates/greensource_pages/about.html
@@ -134,21 +134,53 @@
                 <p>What we are able to help you with</p>
             </div>
             <div class="radial col-lg-4 col-sm-6 col-xs-12">
-                <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="60.000000pt" height="60.000000pt" viewBox="0 0 256.000000 256.000000"
+                    <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
+                    width="60.000000pt" height="60.000000pt" viewBox="0 0 128.000000 128.000000"
                     preserveAspectRatio="xMidYMid meet">
-                    <g transform="translate(0.000000,256.000000) scale(0.100000,-0.100000)" fill="#000000" stroke="none">
-                        <path d="M0 2275 l0 -285 23 15 c21 13 94 15 572 13 l549 -3 68 -79 c58 -67
-                68 -84 68 -117 0 -32 -9 -48 -60 -106 -33 -37 -70 -73 -83 -80 -17 -9 -148
-                -12 -553 -13 -523 0 -532 0 -558 21 l-26 20 0 -110 c0 -111 0 -111 20 -91 20
-                20 33 20 777 20 417 0 763 -4 769 -8 7 -4 41 -43 78 -87 91 -109 89 -123 -22
-                -239 l-63 -66 -756 0 -757 0 -23 22 -23 21 0 -112 0 -112 26 20 c27 21 31 21
-                980 21 l953 0 24 -23 c39 -35 127 -147 127 -160 0 -7 -6 -3 -12 8 -14 24 -106
-                135 -127 152 -11 10 -97 13 -353 13 l-338 0 0 -190 0 -190 342 0 342 0 64 67
-                c35 38 67 77 72 88 6 13 9 15 9 5 1 -8 -31 -50 -70 -93 l-71 -77 -964 0 c-951
-                0 -964 0 -984 20 l-20 20 0 -290 0 -290 1280 0 1280 0 0 1280 0 1280 -1280 0
-                -1280 0 0 -285z" />
-                    </g>
-                </svg>
+                   <g transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)"
+                   fill="#000000" stroke="none">
+                   <path d="M29 1251 l-29 -29 0 -132 c0 -149 10 -181 61 -199 46 -16 262 -14
+                   302 3 41 17 144 129 152 166 8 38 -12 80 -67 138 -79 84 -74 82 -241 82 l-149
+                   0 -29 -29z m390 -76 c39 -42 61 -74 61 -89 0 -25 -88 -139 -120 -156 -10 -6
+                   -78 -10 -151 -10 -176 0 -169 -7 -169 165 0 88 4 135 12 143 8 8 58 12 159 12
+                   l147 0 61 -65z"/>
+                   <path d="M197 1173 c-3 -4 -19 -46 -37 -91 -22 -57 -29 -87 -22 -94 13 -13 32
+                   -2 32 18 0 24 77 19 90 -6 14 -27 30 -25 29 3 -1 38 -56 172 -72 175 -8 2 -17
+                   -1 -20 -5z m33 -100 c0 -7 -9 -13 -20 -13 -17 0 -18 3 -8 25 8 19 14 22 20 13
+                   4 -7 8 -19 8 -25z"/>
+                   <path d="M823 1256 c-129 -60 -171 -232 -83 -336 89 -103 109 -158 76 -203
+                   -17 -24 -18 -32 -8 -60 9 -25 9 -40 0 -64 -10 -26 -9 -35 5 -57 10 -14 29 -29
+                   43 -32 13 -4 38 -19 54 -35 23 -24 37 -29 75 -29 38 0 52 5 75 29 16 16 41 31
+                   54 35 35 9 60 49 52 84 -8 32 -8 35 0 83 4 25 1 39 -10 48 -22 18 -20 59 4
+                   106 22 42 25 65 11 65 -17 0 -52 -54 -64 -98 l-11 -43 -46 3 -45 3 -3 57 c-3
+                   57 -3 58 30 71 49 20 88 71 88 113 0 45 -26 46 -34 1 -20 -107 -166 -112 -197
+                   -7 -17 56 -44 55 -36 -1 6 -47 37 -85 85 -105 31 -14 32 -16 32 -74 l0 -60
+                   -50 0 c-41 0 -50 3 -50 18 -1 31 -40 105 -79 147 -68 74 -79 167 -28 244 42
+                   62 93 81 223 81 150 -1 202 -25 239 -113 21 -51 19 -112 -7 -163 -22 -45 -20
+                   -61 6 -51 21 8 45 59 53 112 9 69 -13 132 -66 185 -58 57 -100 70 -232 70 -89
+                   0 -112 -4 -156 -24z m305 -570 c7 -36 -24 -46 -141 -46 -59 0 -117 5 -128 10
+                   -19 11 -26 40 -12 54 4 3 68 5 142 4 125 -3 136 -5 139 -22z m-8 -91 c6 -8 10
+                   -22 8 -32 -3 -16 -16 -18 -143 -18 -127 0 -140 2 -143 18 -8 40 14 47 143 47
+                   95 0 125 -3 135 -15z m-84 -104 c-11 -18 -56 -21 -84 -7 -27 15 -26 15 31 16
+                   32 0 56 -4 53 -9z"/>
+                   <path d="M48 825 c-42 -24 -48 -44 -48 -179 0 -215 -12 -208 351 -204 l271 3
+                   68 71 c104 109 102 148 -10 260 l-61 59 -272 2 c-226 2 -277 0 -299 -12z m590
+                   -60 c60 -54 95 -110 88 -139 -3 -14 -32 -52 -64 -85 l-58 -61 -266 0 c-229 0
+                   -269 2 -282 16 -23 23 -23 265 0 288 13 14 53 16 280 16 l264 0 38 -35z"/>
+                   <path d="M134 727 c-3 -8 -4 -52 -2 -98 l3 -84 49 0 c42 0 52 4 69 27 18 24
+                   19 31 7 55 -7 15 -12 38 -11 51 4 36 -26 62 -71 62 -23 0 -41 -5 -44 -13z m76
+                   -42 c0 -8 -9 -15 -20 -15 -11 0 -20 7 -20 15 0 8 9 15 20 15 11 0 20 -7 20
+                   -15z m9 -64 c21 -13 5 -41 -24 -41 -20 0 -25 5 -25 25 0 26 22 33 49 16z"/>
+                   <path d="M55 386 c-46 -20 -55 -51 -55 -197 l0 -131 29 -29 29 -29 527 0 c435
+                   0 531 2 553 14 44 23 133 132 139 170 7 44 -12 78 -87 151 l-61 60 -412 0
+                   c-384 0 -412 -1 -415 -17 -3 -17 21 -18 404 -18 l408 0 63 -64 c85 -87 85
+                   -105 1 -192 l-61 -64 -519 0 c-339 0 -526 4 -539 10 -17 10 -19 22 -19 144 0
+                   165 -1 164 125 168 72 2 90 6 90 18 0 21 -157 25 -200 6z"/>
+                   <path d="M194 290 c-30 -12 -64 -58 -64 -87 0 -80 93 -132 151 -84 19 16 22
+                   22 12 32 -10 10 -16 10 -25 1 -18 -18 -63 -14 -81 6 -44 48 -1 109 67 96 29
+                   -5 36 -3 36 10 0 9 -12 21 -26 26 -30 12 -42 12 -70 0z"/>
+                   </g>
+                   </svg>                   
                 <h5>Energy saving</h5>
                 <p>On installation you get to save money through controlled energy monitoring and consumption.</p>
             </div>
