--- a/greensource_pages/templates/greensource_pages/index.html
+++ b/greensource_pages/templates/greensource_pages/index.html
@@ -42,7 +42,7 @@ for Homes and Businesses {{ block.super }}{% endblock %} {% block content %}
     <div class="row colum padding">
         <div class="colum-body col-xs-12 col-md-6 col-lg-3">
             <div>
-                <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="100.000000pt" height="100.000000pt" viewBox="0 0 256.000000 256.000000"
+                <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="90.000000pt" height="90.000000pt" viewBox="0 0 256.000000 256.000000"
                     preserveAspectRatio="xMidYMid meet">
                     <g transform="translate(0.000000,256.000000) scale(0.100000,-0.100000)" fill="#006420" stroke="none">
                         <path d="M1650 2091 c-5 -11 -10 -31 -10 -45 0 -41 -30 -50 -79 -23 l-41 22
@@ -106,11 +106,11 @@ for Homes and Businesses {{ block.super }}{% endblock %} {% block content %}
                     </g>
                 </svg>
             </div>
-            <h6>Unique Design</h6>
+            <p>Unique Design</p>
         </div>
         <div class="colum-body col-xs-12 col-md-6 col-lg-3">
             <div>
-                <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="100.000000pt" height="100.000000pt" viewBox="0 0 256.000000 256.000000"
+                <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="90.000000pt" height="90.000000pt" viewBox="0 0 256.000000 256.000000"
                     preserveAspectRatio="xMidYMid meet">
                     <g transform="translate(0.000000,256.000000) scale(0.100000,-0.100000)" fill="#006420" stroke="none">
                         <path d="M475 2085 l-25 -24 0 -294 c0 -281 1 -295 20 -320 18 -23 29 -26 93
@@ -160,11 +160,11 @@ for Homes and Businesses {{ block.super }}{% endblock %} {% block content %}
                     </g>
                 </svg>
             </div>
-            <h6>Smart Tech</h6>
+            <p>Smart Tech</p>
         </div>
         <div class="colum-body col-xs-12 col-md-6 col-lg-3">
             <div>
-                <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="100.000000pt" height="100.000000pt" viewBox="0 0 256.000000 256.000000"
+                <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="90.000000pt" height="90.000000pt" viewBox="0 0 256.000000 256.000000"
                     preserveAspectRatio="xMidYMid meet">
                     <g transform="translate(0.000000,256.000000) scale(0.100000,-0.100000)" fill="#006420" stroke="none">
                         <path d="M1721 2181 c-8 -5 -11 -26 -9 -57 3 -41 6 -49 23 -49 17 0 20 8 23
@@ -234,12 +234,12 @@ for Homes and Businesses {{ block.super }}{% endblock %} {% block content %}
                     </g>
                 </svg>
             </div>
-            <h6>Free Energy</h6>
+            <p>Free Energy</p>
         </div>
         <div class="colum-body col-xs-12 col-md-6 col-lg-3">
             <div>
                 <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
-                width="100.000000pt" height="100.000000pt" viewBox="0 0 256.000000 256.000000"
+                width="90.000000pt" height="90.000000pt" viewBox="0 0 256.000000 256.000000"
                 preserveAspectRatio="xMidYMid meet">
                <g transform="translate(0.000000,256.000000) scale(0.100000,-0.100000)"
                fill="#006420" stroke="none">
@@ -309,7 +309,7 @@ for Homes and Businesses {{ block.super }}{% endblock %} {% block content %}
                </g>
                </svg>
             </div>
-            <h6>24/7 Support</h6>
+            <p>24/7 Support</p>
         </div>
     </div>
 </div>
