--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -33,6 +33,9 @@
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %}" />
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png' %}" />
     <link  rel="stylesheet" href='https://fonts.googleapis.com/css?family=Poppins|Play|Big+Shoulders+Display|Teko' />
+    <link rel="preload" as="script" href="https://cdn.ampproject.org/v0.js">
+    <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1, end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1, end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1, end) 0s 1 normal both;animation:-amp-start 8s steps(1, end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
+    <link rel="canonical" href="https://greensourcenergy.com" />
 </head>
 <body>
 <div class="site-mobile-menu site-navbar-target">
@@ -265,9 +268,11 @@
     <script async>if(typeof($.fn.modal) === 'undefined') {document.write('<script src="/static/bootstrap-4.3.1-dist/js/bootstrap.bundle.min.js"><\/script>')}</script>
     <script src="{% static 'js/output.min.js' %}" async ></script>
     <script src="{% static 'js/main.js' %}" async ></script>
-    <script src="https://cdn.ampproject.org/v0.js" async ></script>
     <script src="https://www.googletagmanager.com/gtag/js?id=UA-40167744-1"  async ></script>
-    <script src="https://cdn.ampproject.org/v0.js" async></script>
+    <script async src="https://cdn.ampproject.org/v0.js"></script>
+    <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
+    <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
+    <script async custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"></script>
     <script>
     var test = document.createElement("div")
     test.className = "hidden d-none"
@@ -282,6 +287,9 @@
         document.head.appendChild(link); async
     }
     </script>
+    <noscript><img height="1" width="1" style="display:none"
+        src="https://www.facebook.com/tr?id=680910845861426&ev=PageView&noscript=1"
+    /></noscript>
 </body>
 </html>
 
