--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -24,18 +24,18 @@
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Need a cost effective and reliable Solar Home System for your Home or Business? We will design / install a custom system that fits your energy requirement!"/>
     <title>{% block title %}- Greensource Energy {% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'css/home.css' %}" type="text/css" id="css" disabled />
-    <link rel="stylesheet" href="{% static 'css/allcss.css' %}" type="text/css" id="allcss" disabled />
+    <link rel="stylesheet" href="{% static 'css/home.css' %}" media="print" onload="this.media='all'" />
+    <link rel="stylesheet" href="{% static 'css/allcss.css' %}" media="print" onload="this.media='all'" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />     
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
-    <link href="{% static 'icomoon/style.css' %}" rel="stylesheet" type="text/css" id="icomoon" disabled />
+    <link href="{% static 'icomoon/style.css' %}" rel="stylesheet" media="print" onload="this.media='all'" />
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png' %}" />
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %}" />
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png' %}" />
     <link  rel="stylesheet" href='https://fonts.googleapis.com/css?family=Poppins|Play|Big+Shoulders+Display|Teko' />
     <link rel="preload" as="script" href="https://cdn.ampproject.org/v0.js">
     <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1, end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1, end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1, end) 0s 1 normal both;animation:-amp-start 8s steps(1, end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
-    <link rel="canonical" href="https://greensourcenergy.com" />
+    <link rel="canonical" href="https://greensourcenergy.com/" />
 </head>
 <body>
 <div class="site-mobile-menu site-navbar-target">
