--- a/greensource_pages/templates/greensource_pages/index.html
+++ b/greensource_pages/templates/greensource_pages/index.html
@@ -779,22 +779,22 @@ for Homes and Businesses {{ block.super }}{% endblock %} {% block content %}
         <div class="brand-carousel-wrapper">
             <div class="brand-carousel-one owl-theme owl-carousel">
                 <div class="item">
-                    <img src="{% static 'images/brand-1-1.webp' %}" alt="img" />
+                    <img src="{% static 'images/brand-1-1.webp' %}" alt="sona logo" />
                 </div>
                 <div class="item">
-                    <img src="{% static 'images/brand-1-2.webp' %}" alt="img" />
+                    <img src="{% static 'images/brand-1-2.webp' %}" alt="energy talent logo" />
                 </div>
                 <div class="item">
-                    <img src="{% static 'images/brand-1-3.webp' %}" alt="img" />
+                    <img src="{% static 'images/brand-1-3.webp' %}" alt="schneider logo" />
                 </div>
                 <div class="item">
-                    <img src="{% static 'images/brand-1-4.webp' %}" alt="img" />
+                    <img src="{% static 'images/brand-1-4.webp' %}" alt="amaron logo" />
                 </div>
                 <div class="item">
-                    <img src="{% static 'images/brand-1-5.webp' %}" alt="img" />
+                    <img src="{% static 'images/brand-1-5.webp' %}" alt="felicity logo" />
                 </div>
                 <div class="item">
-                    <img src="{% static 'images/brand-1-6.webp' %}" alt="img" />
+                    <img src="{% static 'images/brand-1-6.webp' %}" alt="abb logo" />
                 </div>
             </div>
         </div>
